Include sass files in styleguide

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,5 +1,5 @@
-// ---------------------------------------------------------------------------
-// Color Palette (Solarized: http://ethanschoonover.com/solarized)
+// Color Palette
+// =============
 
 $yellow   : #f2ac00;
 $orange   : #f26e00;
@@ -10,8 +10,8 @@ $blue     : #009191;
 $cyan     : #5ac8c8;
 $green    : #3ed000;
 
-// ---------------------------------------------------------------------------
 // Color System
+// ------------
 
 $base     : color(darker);
 $alt      : color($blue darker);
