--- a/templates/styleguide/base/_color.html
+++ b/templates/styleguide/base/_color.html
@@ -1,1 +1,5 @@
 {% extends "styleguide/_pattern.html" %}
+
+{% block markup-section %}{% endblock %}
+
+{% block sass %}{% include "styleguide/base/_colors.scss" %}{% endblock %}
