--- a/templates/styleguide/base/_color.html
+++ b/templates/styleguide/base/_color.html
@@ -3,3 +3,10 @@
 {% block markup-section %}{% endblock %}
 
 {% block sass %}{% include "styleguide/base/_colors.scss" %}{% endblock %}
+
+{% block docs %}
+<h2>Requirements</h2>
+<ul>
+  <li>Accoutrement</li>
+</ul>
+{% endblock %}
