Add icon fonts/settings and styleguides

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -16,6 +16,7 @@
 @import "base/sizes";
 @import "base/colors";
 @import "base/type";
+@import "base/icons";
 @import "base/grids";
 @import "base/utilities";
 
@@ -27,7 +28,6 @@
 @import "general/root";
 @import "general/type";
 @import "general/icons";
-@import "general/icomoon";
 @import "general/forms";
 
 // Layout
