--- a/templates/styleguide/styleguide.html
+++ b/templates/styleguide/styleguide.html
@@ -28,6 +28,7 @@
 <!-- Base -->
 {% include "styleguide/base/_size.html" with pattern_name="size" %}
 {% include "styleguide/base/_color.html" with pattern_name="color" %}
+{% include "styleguide/base/_icons.html" with pattern_name="icons" %}
 
 </div>
 {% endblock %}
