Add icons link to styleguide nav

--- a/templates/styleguide/styleguide.html
+++ b/templates/styleguide/styleguide.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="#size-pattern">Size</a></li>
         <li><a href="#color-pattern">Color</a></li>
+        <li><a href="#icons-pattern">Icons</a></li>
       </ul>
     </li>
   </ul>
