Cyan not default background

--- a/sass/general/_root.scss
+++ b/sass/general/_root.scss
@@ -8,7 +8,7 @@
 html {
   @include sans;
   color: $base;
-  background: color($cyan light,.25);
+  background: color(lightest,.25);
 }
 
 html, body {
