Wireframe teacher info and form

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -14,7 +14,7 @@ $green    : #3ed000;
 // ------------
 
 $base     : color(darker);
-$alt      : color($blue darker);
+$alt      : color($blue dark);
 $accent   : $maroon;
 
 $contrasted-dark-default  : color($base darkest);
