--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -1,22 +1,22 @@
 // Icons
 // =====
 
-$icon-menu          : 'menu'          '\e000';
-$icon-lock          : 'lock'          '\e001';
-$icon-unlocked      : 'unlocked'      '\e002';
-$icon-bubble-plus   : 'bubble-plus'   '\e003';
-$icon-remove        : 'remove'        '\e004';
-$icon-bubble-heart  : 'bubble-heart'  '\e005';
+$icon-menu          : '\e000';
+$icon-lock          : '\e001';
+$icon-unlocked      : '\e002';
+$icon-bubble-plus   : '\e003';
+$icon-remove        : '\e004';
+$icon-bubble-heart  : '\e005';
 
 // Debug
 $debug: append($debug, icons);
 
-$debug-icons: $icon-menu
-              $icon-lock
-              $icon-unlocked
-              $icon-bubble-plus
-              $icon-remove
-              $icon-bubble-heart;
+$debug-icons: 'menu'          $icon-menu,
+              'lock'          $icon-lock,
+              'unlocked'      $icon-unlocked,
+              'bubble-plus'   $icon-bubble-plus,
+              'remove'        $icon-remove,
+              'bubble-heart'  $icon-bubble-heart;
 
 @mixin debug-icons {
   @debug '# Icons';
